Navbar collapse fix

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -1,11 +1,13 @@
+// Settings
 $red: #800b0b;
 $white: #e7e8e8;
 $black: #212021;
 
+// Base
 body {
   width: 100%;
   height: 100%;
-  padding-top: 50px;
+  padding-top: 70px;
   font-family: 'Open Sans', sans-serif;
 }
 
@@ -14,6 +16,7 @@ html {
   height: 100%;
 }
 
+// Trumps
 .navbar {
   margin-bottom: 0;
 }
@@ -33,7 +36,10 @@ html {
 
 .navbar-custom {
   background-color: $white;
-  height: 70px;
+
+  .collapse {
+    height: 70px;
+  }
 
   .navbar-header {
     height: 70px;
@@ -58,8 +64,6 @@ html {
   }
 
   .nav.navbar-nav {
-    height: 70px;
-
     li {
       padding-top: 10px;
       padding-bottom: 10px;
@@ -71,7 +75,12 @@ html {
     }
   }
 
+  .navbar-collapse {
+    background-color: $white;
+  }
+
   .navbar-collapse.in {
     overflow-y: visible;
+    height: auto;
   }
 }
